5.5_CRM Fix: hide modal window for adaptive (add visibility: hidden)

--- a/CRM/crm2.css
+++ b/CRM/crm2.css
@@ -1,4 +1,4 @@
-.container-crm {  
+.container-crm {    
   position: absolute;
   top: 100px;
   right: 0;
@@ -10,10 +10,12 @@
   padding: 32px 106px 39px;
   background-color: var(--container-color);  
   opacity: 0;
+  visibility: hidden;
 }
 
-.container-crm.is-visible {  
+.container-crm.is-visible {    
   opacity: 1;
+  visibility: visible;
   transition: 0.2s;
 }
 
